# ceramic

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  ceramic-do.sh  wget-log  xstartup
src/: artist.rs  commands.rs  config.rs  connection.rs  layout.rs  main.rs  window.rs  window_data.rs  window_manager.rs  window_selector.rs  workspace.rs
src/config/: default.rs  user.rs
src/layout/: add_border.rs  add_focus_border.rs  add_gaps.rs  add_window_selector_labels.rs  avoid_struts.rs  floating_layout.rs  grid_layout.rs  ignore_unmanaged_windows.rs  layout_root.rs  linear_layout.rs  monad_layout.rs  split_layout.rs  stack_layout.rs
