[package]
name = "ceramic"
description = "Tiling Window Manager, configured using Rust"
version = "1.0.0"
repository = "https://github.com/antonyblakey/ceramic"
authors = ["Antony Blakey <antony.blakey@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = []
categories = []
edition = "2018"

[dependencies]
structopt = "~0.2.15"
clap-verbosity-flag = "0.2.0"
euclid = "~0.19.6"
itertools = "~0.8"
lazy_static = "~1.3.0"
maplit = "~1.0.1"
# webrender = "~0.60.0"
cairo-rs = { version = "*", features = ["xcb"] }
cairo-sys-rs = { version = "*", features = ["xcb"] }
pango = "*"
pangocairo = "*"
xcb = { version = "~0.8.2", features = [] }
# xcb = { version = "~0.8.2", features = ["xfixes", "render", "shape", "xinerama", "composite"] }
x11 = { version = "~2.18.1", features = ["xlib"] }
xkbcommon = { version = "~0.4", features = ["x11"] }
xcb-util = { version = "~0.2", features = ["keysyms"] }

[profile.release]
lto = true